--- a/app/src/main/res/layout/activity_ambulance_reg.xml
+++ b/app/src/main/res/layout/activity_ambulance_reg.xml
@@ -7,208 +7,213 @@
     android:orientation="vertical"
     tools:context=".AmbulanceReg">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="12dp"
+            android:fontFamily="@font/jose_san_bold"
+            android:text="Let's give some information's about your Ambulance"
+            android:textColor="@color/black"
+            android:textSize="32sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:textColor="@color/black"
-                android:textSize="32sp"
-                android:text="Let's give some information's about your Ambulance"/>
+                android:layout_marginRight="16dp"
+                android:textColorHint="@color/colorAccent">
+
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/ed_manufacturer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ambulance_red_icon_24dp"
+                    android:drawableRight="@drawable/ic_arrow_drop_down"
+                    android:drawablePadding="8dp"
+                    android:drawableTint="@color/colorAccent"
+                    android:hint="Manufacturer"
+                    android:padding="12dp"
+                    android:visibility="gone" />
+
+
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
                     android:layout_marginTop="16dp"
-                    android:textColorHint="@color/colorAccent"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                    android:layout_marginRight="4dp"
+                    android:layout_weight="2"
+                    android:textColorHint="@color/colorAccent">
+
                     <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                        android:id="@+id/ed_manufacturer"
-                        android:visibility="gone"
+                        android:id="@+id/ed_model"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:drawableTint="@color/colorAccent"
                         android:drawableLeft="@drawable/ambulance_red_icon_24dp"
                         android:drawableRight="@drawable/ic_arrow_drop_down"
                         android:drawablePadding="8dp"
-                        android:padding="12dp"
-                        android:hint="Manufacturer"/>
+                        android:drawableTint="@color/colorAccent"
+                        android:hint="Car Model"
+                        android:padding="12dp" />
 
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-
-                <LinearLayout
-                    android:visibility="gone"
-                    android:layout_width="match_parent"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="4dp"
-                        android:layout_marginTop="16dp"
-                        android:textColorHint="@color/colorAccent"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                            android:id="@+id/ed_model"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:drawableTint="@color/colorAccent"
-                            android:drawableLeft="@drawable/ambulance_red_icon_24dp"
-                            android:drawableRight="@drawable/ic_arrow_drop_down"
-                            android:drawablePadding="8dp"
-                            android:padding="12dp"
-                            android:hint="Car Model"/>
-
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="16dp"
-                        android:textColorHint="@color/colorAccent"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                            android:id="@+id/ed_year"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:drawableTint="@color/colorAccent"
-                            android:drawableLeft="@drawable/ic_event_note"
-                            android:drawableRight="@drawable/ic_arrow_drop_down"
-                            android:drawablePadding="8dp"
-                            android:padding="12dp"
-                            android:hint="Year"/>
-
-
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginRight="16dp"
-                    android:layout_marginTop="16dp"
-                    android:textSize="18sp"
-                    android:textColor="@color/red"
-                    android:text="Ambulance Type : "/>
+                    android:layout_weight="1"
+                    android:textColorHint="@color/colorAccent">
 
-                <RadioGroup
-                    android:id="@+id/ambulanceTypeGroup"
-                    android:textSize="18sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp">
-
-                    <RadioButton
-                        android:id="@+id/radio_icu"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/red"
-                        android:checked="true"
-                        android:text="ICU/CCU"/>
-                    <RadioButton
-                        android:id="@+id/radio_General"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/red"
-                        android:text="General"/>
-
-                </RadioGroup>
-
-
-                <TextView
-                    android:textSize="18sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="16dp"
-                    android:textColor="@color/red"
-                    android:text="Select Category : "/>
-
-
-                <LinearLayout
-
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <RadioGroup
-                        android:id="@+id/acTypeGroup"
-                        android:textSize="18sp"
+                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                        android:id="@+id/ed_year"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp">
-
-                        <RadioButton
-                            android:id="@+id/ac_on"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/red"
-                            android:checked="true"
-                            android:text="AC"/>
-                        <RadioButton
-                            android:id="@+id/ac_off"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/red"
-                            android:text="NON-Ac"/>
-
-                    </RadioGroup>
-                </LinearLayout>
+                        android:drawableLeft="@drawable/ic_event_note"
+                        android:drawableRight="@drawable/ic_arrow_drop_down"
+                        android:drawablePadding="8dp"
+                        android:drawableTint="@color/colorAccent"
+                        android:hint="Year"
+                        android:padding="12dp" />
 
 
-
-
-
-
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
-            <Button
-                android:id="@+id/sumbitBtnAmbulance"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/benson_bagla_font"
-                android:textAllCaps="true"
-                android:background="@drawable/login_btn_background"
-                android:textColor="#fff"
-                android:text="@string/continuetext"/>
+                android:fontFamily="@font/jose_san_bold"
+                android:text="Ambulance Type : "
+                android:textColor="@color/red"
+                android:textSize="18sp" />
 
+            <RadioGroup
+                android:id="@+id/ambulanceTypeGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
+                android:textSize="18sp">
+
+                <RadioButton
+                    android:id="@+id/radio_icu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:fontFamily="@font/jose_san_bold"
+                    android:text="ICU/CCU"
+                    android:textColor="@color/red" />
+
+                <RadioButton
+                    android:id="@+id/radio_General"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/jose_san_bold"
+                    android:text="General"
+                    android:textColor="@color/red" />
+
+            </RadioGroup>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
+                android:fontFamily="@font/jose_san_bold"
+                android:text="Select Category : "
+                android:textColor="@color/red"
+                android:textSize="18sp" />
+
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioGroup
+                    android:id="@+id/acTypeGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:textSize="18sp">
+
+                    <RadioButton
+                        android:id="@+id/ac_on"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:fontFamily="@font/jose_san_bold"
+                        android:text="AC"
+                        android:textColor="@color/red" />
+
+                    <RadioButton
+                        android:id="@+id/ac_off"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/jose_san_bold"
+                        android:text="NON-Ac"
+                        android:textColor="@color/red" />
+
+                </RadioGroup>
+            </LinearLayout>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/sumbitBtnAmbulance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/login_btn_background"
+            android:fontFamily="@font/jose_san_bold"
+            android:text="@string/continuetext"
+            android:textAllCaps="true"
+            android:textColor="#fff" />
+
+    </LinearLayout>
 
 </LinearLayout>
