--- a/app/src/main/res/layout/activity_driver__licence_upload.xml
+++ b/app/src/main/res/layout/activity_driver__licence_upload.xml
@@ -10,19 +10,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/titleText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:id="@+id/titleText"
             android:layout_marginBottom="24dp"
+            android:fontFamily="@font/jose_san_bold"
             android:text="Pick a photo of your Driver's License"
             android:textSize="28sp" />
 
@@ -31,26 +32,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:fontFamily="@font/jose_san_bold"
             android:text="Please make sure we can easily read all the details"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/imageOnUploadPage"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginTop="40dp"
             android:layout_gravity="center"
-            android:visibility="visible"
-            android:src="@drawable/nid_card2" />
+            android:layout_marginTop="40dp"
+            android:src="@drawable/nid_card2"
+            android:visibility="visible" />
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circlerImageOnUpload"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/avatar"
             android:layout_gravity="center"
-            android:visibility="gone"
-            android:id="@+id/circlerImageOnUpload"
-            />
+            android:src="@drawable/avatar"
+            android:visibility="gone" />
 
 
     </LinearLayout>
@@ -59,8 +60,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="10dp"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,10 +72,11 @@
                 android:id="@+id/takePhotoBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Take Photo"
                 android:layout_margin="16dp"
-                android:textColor="@color/white"
-                android:background="@drawable/btn_red_back"/>
+                android:background="@drawable/btn_red_back"
+                android:fontFamily="@font/jose_san_bold"
+                android:text="Take Photo"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
