--- a/app/src/main/res/layout/activity_driver_nid_upload.xml
+++ b/app/src/main/res/layout/activity_driver_nid_upload.xml
@@ -10,12 +10,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
@@ -23,26 +23,28 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:fontFamily="@font/jose_san_bold"
             android:text="Take a photo of your NID card"
-            android:textSize="28sp"/>
+            android:textSize="28sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:fontFamily="@font/jose_san_bold"
             android:text="Please make sure we can easily read all the details"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
 
         <ImageView
             android:id="@+id/selectedPic"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginTop="40dp"
             android:layout_gravity="center"
-            android:visibility="visible"
-            android:src="@drawable/nid_card2" />
+            android:layout_marginTop="40dp"
+            android:src="@drawable/nid_card2"
+            android:visibility="visible" />
 
     </LinearLayout>
 
@@ -50,8 +52,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="10dp"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,10 +64,11 @@
                 android:id="@+id/buttonSumbit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Take Photo"
                 android:layout_margin="16dp"
-                android:textColor="@color/white"
-                android:background="@drawable/btn_red_back"/>
+                android:background="@drawable/btn_red_back"
+                android:fontFamily="@font/jose_san_bold"
+                android:text="Take Photo"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
