--- a/app/src/main/res/layout/last_trip_view_module.xml
+++ b/app/src/main/res/layout/last_trip_view_module.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="8dp"
         android:id="@+id/tripModule_card"
-        app:cardElevation="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:cardElevation="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2">
+
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="120dp"
                 android:layout_height="100dp"
-                app:cardCornerRadius="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginBottom="12dp">
+                android:layout_marginBottom="12dp"
+                app:cardCornerRadius="8dp">
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -38,89 +39,97 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:layout_marginLeft="8dp"
-                android:orientation="vertical"
-                android:layout_weight="2">
+                android:layout_marginTop="12dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="2">
+
                     <TextView
                         android:id="@+id/dateOfRows"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
-                        android:textColor="#000000"
-                        android:textAlignment="textStart"
-                        android:textStyle="bold"
                         android:layout_weight="2"
-                        />
+                        android:fontFamily="@font/jose_san_bold"
+                        android:text=""
+                        android:textAlignment="textStart"
+                        android:textColor="#000000"
+                        android:textStyle="bold" />
+
                     <TextView
-                        android:visibility="gone"
                         android:id="@+id/statusRows"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Completed"
+                        android:fontFamily="@font/jose_san_bold"
                         android:paddingLeft="10dp"
-                        android:paddingRight="4dp"
                         android:paddingTop="2dp"
+                        android:paddingRight="4dp"
                         android:paddingBottom="2dp"
+                        android:text="Completed"
+                        android:textAlignment="textEnd"
 
                         android:textColor="#fff"
 
-                        android:textStyle="bold"
-                        android:textAlignment="textEnd"
                         android:textSize="14sp"
-                        />
+                        android:textStyle="bold"
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="10sp"
-                        android:text="Pickup Location"/>
+                        android:fontFamily="@font/jose_san_bold"
+                        android:text="Pickup Location"
+                        android:textSize="10sp" />
 
                     <TextView
                         android:id="@+id/locationFroms"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
-                        android:textSize="12sp"
+                        android:fontFamily="@font/jose_san_bold"
+                        android:text=""
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:text=""/>
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="10sp"
-                        android:text="Drop of Location"/>
+                        android:fontFamily="@font/jose_san_bold"
+                        android:text="Drop of Location"
+                        android:textSize="10sp" />
 
                     <TextView
                         android:id="@+id/locationTos"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
-                        android:textSize="12sp"
+                        android:fontFamily="@font/jose_san_bold"
+                        android:text=""
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:text=""/>
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
 
